# backend/src/modules/teacher/dto/update-teacher.input.dto.ts
@@ -11,14 +11,6 @@ export class UpdateTeacherDto {
 	})
 	name: string;
 
-	@IsString()
-	@IsOptional()
-	@ApiProperty({
-		description: "The telegram link of the teacher",
-		example: "https://t.me/teacher123",
-	})
-	telegram_link: string | null;
-
 	@IsEnum(Timezone)
 	@IsNotEmpty()
 	@ApiProperty({
